<resources>
    <string name="app_name">Video App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log In</string>
    <string name="sing_up">Sing Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="hi_i_m_information_on_quot_video_app">Hi, i\'m information on \"Video App,,!</string>
</resources>